tests/reject/errorInitializer.emojic
🐇 🐫 🚧 🍇
  🆕🍇
    ⤴️🆕 🔤camel🔤❗️
  🍉
🍉

🐇 💰 🍇
  🖍🆕 name 🔡

  🆕 🍼 name 🔡 🍇🍉
🍉

🐇 🐟 🍇
  🖍🆕 resourceA 💰
  🖍🆕 resourceB 💰

  🆕 🚧🐫 🍇
    ↪️ 👍 🍇
      🆕💰🆕 🔤2_A🔤❗️ ➡️ 🖍resourceA
    🍉
    🚨🆕🐫🆕❗️
    🆕💰🆕 🔤2_B🔤❗️ ➡️ 🖍resourceB
  🍉
🍉

🏁 🍇

🍉
